# stt-data-with-llm

./: .env  .gitignore  .pre-commit-config.yaml  pyproject.toml  requirements.txt
.github/workflows/: CI.yml
src/Stt_data_with_llm/: get_original_transcript.py  inference_transcript.py  stt_data_corrector.py  util.py
src/stt_data_with_llm/: LLM_post_corrector.py  audio_parser.py  catalog_parser.py  config.py  inference_transcript.py  main.py  util.py
tests/: test_audio_parser.py  test_catalog_parser.py  test_inference_text.py  test_llm_parser.py  test_s3_upload.py  test_validation.py
tests/data/: expected_audio_data.json  expected_catalog_data.json
tests/data/expected_output/: audio_transcription_data.json
tests/pyannote_vad_model/: README.md
tests/query_audio_api_output/: api_response.json
tests/test_data/: expected_catalog_data.json
tests/text_files/: full_inference_transcript.txt  inference_transcript(1).txt  llm_inference_data.txt  llm_reference_data.txt  original_text_file.txt  reference_transcript.txt
tests/vad_output/: NW_001_vad_output.json  NW_002_vad_output.json  NW_003_vad_output.json
