[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "stt_data_with_llm"
version = "0.0.1"
authors = [
  { name="OpenPecha", email="dev@openpecha.org" },
]
description = "A small example package"
readme = "README.md"
requires-python = ">=3.12.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
  "anthropic<=0.42.0",
  "evaluate<=0.4.3",
  "jiwer<=3.0.5",
  "python-dotenv<=1.0.1",
  "librosa<=0.10.2.post1",
  "torchaudio<=2.5.1",
  "pyannote.audio<=3.3.2",
  "pydub<=0.25.1",
  "fast-antx @ git+https://github.com/OpenPecha/fast-antx.git",
  "pandas<=2.2.3"
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-cov",
    "pre-commit",
]


[project.urls]
"Homepage" = "https://github.com/OpenPecha/openpecha-project-template"
"Bug Tracker" = "https://github.com/OpenPecha/openpecha-project-template/issues"
